Somewhat done. Cache invalidation only works on /pay and not on /confirm or /payments. TODO jwig image.